--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head> 
         <title>Armando JavaScript Training</title>
-        <meta charset="utf-8"> 
+        <meta charset="utf-8">
         <script>
-            alert("Hello World") 
+            alert("Hello World");
         </script>
     </head>
     <body>
