Added console log for name printing

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta charset="utf-8">
         <script>
             alert("Hello World");
+            let firstName = "Armando";
+            console.log(firstName);
         </script>
     </head>
     <body>
